# command-line-file-manager

./: .gitignore  README.md  ROADMAP  TODO  pyproject.toml  requirements.txt  test-requirements.txt  tox.ini
app/: __main__.py
app/cli/: commands.py
app/logs/: log_messages.py  logger_factory.py  logger_types.py
app/logs/config/: log_messages.py
app/util/: dir_scanner.py  organizer.py
app/utils/: common.py  organizer.py  scanner.py
app/utils/config/: archive.py  error_messages.py  file_extensions.py
examples/: cfg.json  cfg.toml  cfg.yaml
file_manager/: __main__.py  cli.py  dir_scanner.py  log_messages.py  main.py  requirements.txt
file_manager/cli/: commands.py
file_manager/log/: logger_factory.py  logger_types.py
file_manager/logs/: log_messages.py  logger_factory.py
file_manager/logs/config/: log_messages.py  log_output.py  logger_types.py
file_manager/utils/: __init__.py  custom_param.py  decorator.py  organizer.py  scanner.py
file_manager/utils/config/: constants.py
fm-tests-etc/tests/: conftest.py  test_organizer.py  test_scanner.py
fm-tests-etc/tests/resources/duplicates/nested_dir/: nested_other.txt
fm-tests-etc/tests/resources/results/plain_modified/inner_test/most_inner_test/: most_inner_smth.md
manager/: __main__.py
manager/cli/: commands.py
manager/logs/: logger_factory.py
manager/logs/config/: log_messages.py  log_output.py  logger_types.py
manager/utils/: organizer.py  scanner.py
manager/utils/config/: constants.py
src/: dir_scanner.py  main.py
src/log/: log_messages.py  logger_factory.py
src/util/: dir_scanner.py
tests/: conftest.py  test_file_manager.py  test_organizer.py  test_scanner.py  util.py
tests/resources/duplicates/nested_dir/: nested_book1.txt
